# Prata_cpp_tests

./: README.md
Tests/G10/: CMakeLists.txt  stack.cpp  stack.h  stacker.cpp  stock  stock00.cpp  stock20.cpp  stock20.h  strock00.h  usestock.cpp  usestock20.cpp
Tests/G10l1/: CMakeLists.txt  req.cpp  requisites.cpp  requisites.h
Tests/G10l2/: CMakeLists.txt  pers.cpp  person.cpp  person.h
Tests/G10l3/: CMakeLists.txt  GOLF.cpp  golf10.cpp  golf10.h
Tests/G10l4/: CMakeLists.txt  defin.cpp  namclass.h  sales.cpp
Tests/G10l5/: CMakeLists.txt  stack.cpp  stack.h  usestack.cpp
Tests/G10l6/: CMakeLists.txt  move.cpp  move.h  runmove.cpp
Tests/G10l7/: CMakeLists.txt  plorg.h  prorg.cpp  runplorg.cpp
Tests/G10l8/: CMakeLists.txt  list.cpp  list.h  runlist.cpp
Tests/G11/: CMakeLists.txt  G11L1.cpp  G11L1.h  G11L1run.cpp  G11L4  G11L5  G11L6  G11L6.cpp  G11L6.h  G11L6run.cpp  G11l3  g11l2.cpp  g11l2.h  g11l2run.cpp  (+26 more)
Tests/Homework/: CMakeLists.txt  a.cpp  book_learn.txt  learn.txt  main.cpp  test.cpp
Tests/Homework/C++_Learning/: C++_Types.txt  CAST_and_CONST.txt  Multithreading.txt  OOP_C++.txt  Questons_and_Tasks.txt  SORT_and_SEARCH.txt  STL.txt  build_program.txt  enum.txt  exception.txt  foo_parametrs.txt  general_c++.txt  kind_memory.txt  person  ptr_vs_link.txt  sen.cpp  smart_ptr.txt  tasks_from_google.cpp  test  С++11.txt
Tests/Homework/Quest/: All_questions.txt  C++OOP.txt  Linux.txt  Preprocessor_and_compilation.txt  SCM.txt  STL.txt  dev.txt  idiom_remove_erase.cpp  main.cpp  metaprogramming.txt  multithreading.txt  my _ask.txt  quest_from_inet.cpp
(+485 files in other folders)
